Stanford Events Importer x.x-x.x, xxxx-xx-xx
--------------------------------------------

Stanford Events Importer 7.x-3.0-alpha7, 2014-08-28
---------------------------------------------------
By sheamck:
  -Fixed bug in upgrade path from 2.x -> 3.x
By jbickar:
  -Updated field_group classes to match 1.4
  -Added map link field

Stanford Events Importer 7.x-3.0-alpha6, 2014-08-20
---------------------------------------------------
By sheamck:
  - Added missing features dependency protection for update hooks
  - Added views-row-lines to 5 item upcoming block
By jbickar:
  -Added ability to choose Published, Unlisted, or Bookmarked events feeds
  -Minor improvement to UI for choosing between Category and Organization in UI

Stanford Events Importer 7.x-3.0-alpha4, 2014-07-22
---------------------------------------------------
By sheamck:
  - Fix in update hook to deal with Daylight Saving Time

Stanford Events Importer 7.x-3.0-alpha3, 2014-07-15
---------------------------------------------------
By sheamck:
  - Set date field to use site's time zone handling
  - remove 8-hour offset
  - Change update hook to calculates the difference between timezone field set from UTC to site's

Stanford Events Importer 7.x-3.0-alpha2, 2014-05-16
---------------------------------------------------
- BASIC-795: removed no results text
- BASIC-806: Change image display to large-scaled
- BASIC-729 | Changed date format on event display
- Cleaned UP 2.x Autopop pull request
- Cleaned up some formatting

Stanford Events Importer 7.x-3.0-alpha1, 2014-03-11
--------------------------------------------------
- Features 2.x Compatible feature
- New Views
- New sub feature modules
- Clead up node edit form
