@@ -1,0 +1,6 @@
+jQuery(document).ready(function($) {
+
+  $('.node-stanford-event .field-name-field-s-event-map-link a').prepend('<i class="icon-map-marker"></i> ');
+  $('.node-stanford-event .field-name-field-s-event-map-link a').addClass('btn btn-sm');
+});
+
