@@ -2,8 +2,9 @@ name = Stanford Events Importer
 description = Imports events from events.stanford.edu and creates a "Stanford Event" node for each event record
 core = 7.x
 package = Stanford
-version = 7.x-3.0-alpha7
+version = 7.x-3.0-alpha8
 project = stanford_events_importer
+scripts[] = js/stanford_event_nodes.js
 dependencies[] = ctools
 dependencies[] = date
 dependencies[] = date_all_day
